Fixed img css so they work on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,11 @@ span
   {
     display: none;
   }
+  .resume-item-img
+  {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media only screen and (min-width: 750px)
@@ -392,7 +397,7 @@ span
     line-height: 20px;
   }
 
-  a.resume-item-title
+  .resume-item-title
   {
     font-size: 22px;
   }
